create .h and .cpp for all classes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,5 +4,9 @@ project(rope LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-
-add_executable(rope main.cpp)
+#parser.cpp
+#--------
+#set(Parser_lib parser.cpp)
+#add_library(parser STATIC Parser_lib)
+#-------
+add_executable(rope main.cpp wordconvertor.cpp parser.cpp)
